--- a/01-basics.qmd
+++ b/01-basics.qmd
@@ -16,9 +16,13 @@ Quarto allows us to combine different programming languages in one environment. 
 
 # Variables and functions
 
+The most basic components of almost all programming languages are *variables* and *functions*. 
+Variables store values, such as your input data, and have a name so that you can reference the underlying value in your program.
+Functions usually (but not always) receive some input, based on which they compute some output (or modify the underlying state of the program).
+
 ## Variables
 
-To assign a value to a name (a variable), in `R` you use the assignment operator `<-`:
+To assign a value to a name, in `R` you use the assignment operator `<-`:
 
 ```{r}
 x <- 10 # this is a comment
@@ -67,7 +71,6 @@ In `R`, arguments can be specified by name *or* by position, and often have defa
 
 ```{r}
 round(3.14159, digits=2)
-
 ```
 
 You can define your own functions, which can themselves call other functions:
@@ -107,33 +110,62 @@ With this in mind, the exercises we do here will frequently go beyond the conten
 
 1.  Assign your name to a variable and call the `greet(...)` function on it which we defined before.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+me <- "Jakob"
+greet(me)
+```
 
 2.  Copy the `greet()` function from before, rename it to `greet_spanish` and change it so that it says `Hola` instead of `Hello` .
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+greet_spanish <- function(name) {
+  paste("Hola", name)
+}
+
+greet_spanish(me)
+```
 
 3.  Copy the `greet()` function again but this time change it so that it takes the greeting as a second function argument instead of specifying it in the function body.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+
+greet_generic <- function(greeting, name) {
+  paste(greeting, name)
+}
+
+greet_generic("Gruezi", me)
+```
 
 4.  Create a vector with the numbers from 1 to 100 and assign it to a variable called `x`.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+
+x <- 1:100
+```
 
 5.  Find a function that sorts its input in reverse order and apply it to `x`.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+
+sort(x, decreasing=TRUE)
+```
 
 # Data types
 
@@ -262,75 +294,104 @@ If you put `install.packages("...")` into a code cell, you should probably delet
 
 1.  What is wrong with this piece of code? Find the errors and fix them.
 
-    ```{r}
-    #| error: true
+```{r}
+#| error: true
+#| eval: false
 
-    mydf <- data.frame(
-      country <- ("Germany", "France", "Austria"),
-      capital <- c("Berlin", "Paris"),
-      gdp <- c(4.12, 2.80 0.48)
-      
-    ```
+mydf <- data.frame(
+  country <- ("Germany", "France", "Austria"),
+  capital <- c("Berlin", "Paris"),
+  gdp <- c(4.12, 2.80 0.48)
+  
+```
 
 2.  Sample 10 numbers from a normal distribution with mean 0 and standard deviation 2 and assign them to a variable called `s`.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+s <- rnorm(10, mean=0, sd=2)
+```
 
 3.  Compute the empirical mean and the standard deviation of the numbers in `s`.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+mean(s)
+sd(s)
+```
 
 4.  Find the minimum and the maximum value of `s` programmatically.
 
-    ```{r}
-    # write your code here...
-    ```
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+min(s)
+max(s)
+```
 
 5.  What are the indexes of the minimum and maximum value?
 
-    ```{r}
-    # write your code here...
-    ```
-
-<!-- -->
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+which.min(s)
+which.max(s)
+```
 
 6.  Find (the indexes of) all values in `s` that are larger than 0:
 
-    ```{r}
-    # write your code here...
-    ```
-
-<!-- -->
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+idx <- which(s > 0)
+s[idx]
+```
 
 7.  Split the following string at the comma to produce a vector of three strings:
 
-    ```{r}
-    names <- "Tim,Tom,Tina"
-    ```
+```{r}
+names <- "Tim,Tom,Tina"
+```
 
-<!-- -->
+```{r}
+#| code-fold: true
+#| code-summary: Solution
+#| eval: false
+ 
+library(stringr)
+str_split1(names, ",")
+```
 
-8.  Here is a slightly more complex piece of code. What is each line here doing?
+8.  Here is a slightly more complex piece of code. Use your online resources to get help with understanding what each line is doing.
 
-    ```{r}
+```{r}
+#| eval: false
 
-    library(ggplot2)
+library(ggplot2)
 
-    data <- data.frame(
-      group = rep(c("A", "B", "C"), each = 50),
-      value = c(rnorm(50, mean = 10, sd = 2), 
-                rnorm(50, mean = 12, sd = 2),
-                rnorm(50, mean = 15, sd = 2))
-    )
+data <- data.frame(
+  group = rep(c("A", "B", "C"), each = 50),
+  value = c(rnorm(50, mean = 10, sd = 2), 
+            rnorm(50, mean = 12, sd = 2),
+            rnorm(50, mean = 15, sd = 2))
+)
 
-    ggplot(data, aes(x = group, y = value)) +
-      geom_boxplot() +
-      labs(title = "Boxplot Example", x = "Group", y = "Value")
-    ```
+ggplot(data, aes(x = group, y = value)) +
+  geom_boxplot() +
+  labs(title = "Boxplot Example", x = "Group", y = "Value")
+```
 
 # Scripting workflows
 
